moblie needs some love

--- a/index.html
+++ b/index.html
@@ -7,44 +7,23 @@
     </head>
 <!-- https://www.envision.io/blogs/ecommerce-pulse/28829889-how-to-edit-the-css-of-your-shopify-theme -->
     <body>
-        <!-- <div class="splash">
-            <div id="apparel" class="split">
-                <img src="img/apparelLogo.jpg" class="logo" alt="oil &amp; lumber apparel logo"/>
-                <h1>SHOP APPAREL</h1>
-            </div>
-            <div id="home" class="split">
-                <img src="img/apparelLogo.jpg" class="logo" alt="oil &amp; lumber home logo"/>
-                <h1>SHOP HOME</h1>
-            </div>
-        </div> -->
- 
-        
-        <!-- trial 2 -->
-    <!-- <div class='pageOption'>
-        <div class='option'>
-            <img src='img/shirtwide.jpg'>
-            <a href='#' data-inf='photo'>
-            </a>
-        </div>
-        <div class='option'>
-            <img src='img/chairwide.jpg'>
-            <a href='#' data-inf='cinema'>
-            </a>
-        </div>
-    </div> -->
-
-    <!-- trial 4 -->
-    <!-- <div id="container">
-        <div id="triangle-topleft">
-        </div>
-    </div> -->
-
-
-    <!-- trial 5 -->
-
     <div class="parent">
-        <div class="one"></div>
-        <div class="two"></div>
+        <a href="#">
+            <div class="one">
+                <div class="one_content">
+                    <img src="logos/apparel-logo.png" class="apparelLogo" alt="APPAREL LOGO" />
+                    <h1 class="apparelText">APPAREL</h1>
+                </div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="two">
+                <div class="two_content">
+                    <h1 class="designText">FURNITURE</h1>
+                    <img src="logos/design-logo.png" class="designLogo" alt="APPAREL LOGO" />
+                </div>
+            </div>
+        </a>
     </div>
     
     </body>
